# nucleic-acid-text

./: .gitignore  CHANGELOG.md  LICENSE  NA_text_converter_finder.py  NA_text_converter_finderV4.py  NA_text_converter_finderV5.py  README.md  app_resources.py  app_resources.qrc  pyproject.toml
.github/workflows/: ci.yml
assets/: nucleic_acid_text.icns
